--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditItemActivity"></activity>
+        <activity android:name=".DeleteItemActivity"></activity>
         <activity android:name=".NewItemActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
