--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeleteItemActivity"></activity>
+        <activity android:name=".Search"></activity>
+        <activity android:name=".DeleteItemActivity" />
         <activity android:name=".NewItemActivity" />
-        <activity android:name=".EditItemActivity"/>
+        <activity android:name=".EditItemActivity" />
+        <activity android:name="search.search_class">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+                <meta-data
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"
+                        />
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
